# gnore

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: main.rs  prompt.rs
