[package]
name = "ignore"
version = "0.1.0"
authors = ["yashladha"]
edition = "2018"

[dependencies]
structopt = { version = "0.3" }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.6.2"
