[package]
name = "gnore"
version = "0.1.0"
authors = ["yashladha"]
edition = "2018"
keywords = ["cli", "gitignore", "git", "ignore", "prompt"]
categories = ["command-line-interface"]
description = "gitignore.io cli"
license = "MIT"
homepage = "https://github.com/yashladha/gnore"
repository = "https://github.com/yashladha/gnore"
readme = "README.md"

[dependencies]
structopt = { version = "0.3" }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termprompt = "0.7.1"
